<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_Version"
        style="@style/login_tv_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:text="@string/app_Version" />

    <ImageView
        android:layout_width="282dp"
        android:layout_height="119dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/description"
        android:src="@drawable/login_ic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/weChatLogin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="137dp"
            android:layout_height="50dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/login_wechat" />

        <Button
            android:id="@+id/phoneLogin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="137dp"
            android:layout_height="50dp"
            android:background="@drawable/login_phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#30000000"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_horizontal"
            android:paddingTop="8dp">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/login_cb_true"
                android:button="@null"
                android:checked="true" />

            <TextView
                style="@style/login_tv_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/check_text" />

            <TextView
                android:id="@+id/tv_user_protocol"
                style="@style/login_tv_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_user_protocol" />

            <TextView
                android:id="@+id/tv_game_protocol"
                style="@style/login_tv_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_protocol" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text" />

            <TextView
                style="@style/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/login_warning" />

            <TextView
                style="@style/login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_copyright" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>